--- a/seekbar/gradle.properties
+++ b/seekbar/gradle.properties
@@ -18,4 +18,6 @@
 # org.gradle.parallel=true
 
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx1024m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
