--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ison.myapp">
 
+    <!--访问网络的权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!-- 读联系人权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- 写联系人权限 -->
