--- a/WechatAu/app/src/main/AndroidManifest.xml
+++ b/WechatAu/app/src/main/AndroidManifest.xml
@@ -11,12 +11,23 @@
 
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CartActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity android:name=".AccountActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
 
 
     </application>
