--- a/WechatAu/app/src/main/AndroidManifest.xml
+++ b/WechatAu/app/src/main/AndroidManifest.xml
@@ -8,27 +8,73 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".CartActivity"
+        <activity
+            android:name=".CartActivity"
             android:label="@string/nav_cat_name"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <activity android:name=".AccountActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".AccountActivity"
+            android:label="@string/nav_account_name"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".OrdersActivity"
             android:label="@string/nav_cat_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
 
+        <activity
+            android:name=".FloatActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
 
+        <activity
+            android:name=".OrdersInfoActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".CreateActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".BuyActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".Create2Activity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".Create3Activity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".Create4Activity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".Create5Activity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".Create6Activity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
 
     </application>
 
