--- a/WechatAu/app/src/main/AndroidManifest.xml
+++ b/WechatAu/app/src/main/AndroidManifest.xml
@@ -76,6 +76,10 @@
             android:label="@string/nav_cat_name"
             android:theme="@style/AppTheme"></activity>
 
+        <activity
+            android:name=".TestActivity"
+            android:label="@string/nav_cat_name"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
